[project]
name = "astrlboy"
version = "0.1.0"
description = "Autonomous AI agent operating as a freelance contractor"
requires-python = ">=3.11"
dependencies = [
    # API framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",

    # AI
    "anthropic>=0.52.0",
    "langgraph>=0.4.0",
    "langchain-anthropic>=0.3.0",
    "langsmith>=0.3.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.15.0",

    # Storage
    "boto3>=1.35.0",

    # Cache
    "redis[hiredis]>=5.2.0",

    # Scheduler
    "apscheduler>=3.10.0",

    # Scraping & Search
    "firecrawl-py>=1.15.0",
    "tavily-python>=0.5.0",

    # Social
    "tweepy>=4.14.0",

    # Email
    "aiosmtplib>=3.0.0",
    "aioimaplib>=2.0.0",

    # Telegram
    "python-telegram-bot>=21.0",

    # HTTP
    "httpx>=0.28.0",

    # Config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
